# facebook_ms

./: README.md  config.py  main.py  models.py  packages.nix  pyproject.toml  routes.py  scraper.py  utils.py
static/css/: custom.css
templates/: base.html  index.html
